# substrate-api-client-test-node

./: Jenkinsfile  README.md  UPGRADE.md  rust-toolchain.toml
.github/workflows/: check.yml  ci.yml
ci/: install_rust.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
