[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.1.0-pre.2'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
node-template-runtime = { path = '../runtime'}

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-cli = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-executor = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-service = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", rev = "38f723bf" }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
